# subtractiveModel

./: .gitignore  CMakeLists.txt  README.md  bestprog.zip.txt  camera.cpp  camera.h  debugBuild.sh  drawLine.cpp  fovdata.txt  frameProcess.cpp  hollow.cpp  main.cpp  makeStl.cpp  output.stl  output.txt  stitchVoxels.cpp  voxtree.cpp  voxtree.h
src/: camera.cpp  camera.h  delay.cpp  delay.h  frameProcess.cpp  hillClimb.cpp  hillClimb.h  loadJsonConfig.cpp  loadJsonConfig.h  main.cpp  makeStl.cpp  voxtree.cpp  voxtree.h
